--- a/riffshareiii/parts/extensions/alphaTabImport/tsconfig.json
+++ b/riffshareiii/parts/extensions/alphaTabImport/tsconfig.json
@@ -57,6 +57,7 @@
 		,"./alphatab/io/TypeConversions.ts"
 		,"./alphatab/io/IWriteable.ts"
 		,"./alphatab/io/ByteBuffer.ts"
+		,"./alphatab/io/BitReader.ts"
 		,"./alphatab/synth/SynthConstants.ts"
 		,"./alphatab/model/Score.ts"
 		,"./alphatab/model/PickStroke.ts"
@@ -109,13 +110,43 @@
 		,"./alphatab/model/Color.ts"
 		,"./alphatab/model/PlaybackInformation.ts"
 		,"./alphatab/model/InstrumentArticulation.ts"
+		,"./alphatab/model/BackingTrack.ts"
 		,"./alphatab/midi/MidiUtils.ts"		
 		,"./alphatab/midi/GeneralMidi.ts"
 		,"./alphatab/importer/ScoreImporter.ts"
 		,"./alphatab/importer/UnsupportedFormatError.ts"
+		,"./alphatab/importer/GpxFileSystem.ts"
+		,"./alphatab/importer/GpifParser.ts"
+		,"./alphatab/importer/BinaryStylesheet.ts"
 		,"./alphatab/util/Lazy.ts"
+		,"./alphatab/xml/XmlNode.ts"
+		,"./alphatab/xml/XmlDocument.ts"
+		,"./alphatab/xml/XmlError.ts"
+		,"./alphatab/xml/XmlParser.ts"
+		,"./alphatab/xml/XmlWriter.ts"
+		,"./alphatab/generated/model/BeatCloner.ts"
+		,"./alphatab/generated/model/NoteCloner.ts"
+		,"./alphatab/generated/model/BendPointCloner.ts"
+		,"./alphatab/generated/model/AutomationCloner.ts"
+		,"./alphatab/generated/model/SyncPointDataCloner.ts"
+		,"./alphatab/zip/Adler32.ts"
+		,"./alphatab/zip/Crc32.ts"
+		,"./alphatab/zip/Deflater.ts"
+		,"./alphatab/zip/DeflaterConstants.ts"
+		,"./alphatab/zip/DeflaterEngine.ts"
+		,"./alphatab/zip/DeflaterHuffman.ts"
+		,"./alphatab/zip/Huffman.ts"
+		,"./alphatab/zip/HuffTools.ts"
+		,"./alphatab/zip/Inflate.ts"
+		,"./alphatab/zip/PendingBuffer.ts"
+		,"./alphatab/zip/ZipEntry.ts"
+		,"./alphatab/zip/ZipReader.ts"
+		,"./alphatab/zip/ZipWriter.ts"
 
 		,"./alphatab/importer/Gp3To5Importer.ts"
+		,"./alphatab/importer/GpxImporter.ts"
+		,"./alphatab/importer/Gp7To8Importer.ts"
+
 
         ,"./fileimport/aimportplugin.ts"
 		,"./fileimport/fileloader.ts"
