--- a/riffshareiii/parts/extensions/minium.fader/ui/tsconfig.json
+++ b/riffshareiii/parts/extensions/minium.fader/ui/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es2015",
-        "outFile": "../../../exe/plugins/filters/newBaseFader/ui/faderui.js",
+        "outFile": "../../../exe/plugins/filters/minium.fader/ui/faderui.js",
         "strictNullChecks": true,
         "alwaysStrict": true,
         "esModuleInterop": true,
