--- a/crawler/tsconfig.json
+++ b/crawler/tsconfig.json
@@ -44,13 +44,13 @@
 		,"../riffshareiii/parts/extensions/minium.percussion/list/names.ts"
 		,"../riffshareiii/parts/extensions/minium.pitch/list/names.ts"
 
-		,"MIDIEvent.ts"
-		,"MIDIParser.ts"
-		,"MIDIFileTrack.ts"
-		,"MIDIFileHeader.ts"
-		,"DataViewStream.ts"
-		,"midiimport.ts"
-		,"eventsconvert.ts"
+		,"../riffshareiii/parts/extensions/alphaTabImport/midiimport/MIDIEvent.ts"
+		,"../riffshareiii/parts/extensions/alphaTabImport/midiimport/MIDIParser.ts"
+		,"../riffshareiii/parts/extensions/alphaTabImport/midiimport/MIDIFileTrack.ts"
+		,"../riffshareiii/parts/extensions/alphaTabImport/midiimport/MIDIFileHeader.ts"
+		,"../riffshareiii/parts/extensions/alphaTabImport/midiimport/DataViewStream.ts"
+		,"../riffshareiii/parts/extensions/alphaTabImport/midiimport/midiimport.ts"
+		,"../riffshareiii/parts/extensions/alphaTabImport/midiimport/eventsconvert.ts"
 
 		,"metre.ts"
 		
