--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 *.app
 riffshareiii/parts/exe/dbcfg/dbcfgdata.php
 /riffshareiii/parts/vk/mini-app/node_modules
+/riffshareiii/parts/vk/mini-app/build
