--- a/riffshareiii/parts/vk/mini-app/package.json
+++ b/riffshareiii/parts/vk/mini-app/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-	 "build2": "tsc",
+    "build2": "tsc",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "tunnel": "vk-tunnel --http-protocol=http --host=localhost --port=5173",
-    "deploy": "vite build && vk-miniapps-deploy"
-	,"deploy2": "vk-miniapps-deploy"
+    "deploy": "vite build && vk-miniapps-deploy",
+    "deploy2": "vk-miniapps-deploy"
   },
   "dependencies": {
     "@vkontakte/icons": "^3.1.1",
