--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ riffshareiii/parts/exe/dbcfg/dbcfgdata.php
 /riffshareiii/parts/vk/mini-app/build
 /riffshareiii/parts/vk/deploy/node_modules
 /riffshareiii/parts/vk/bridge/node_modules
+/riffshareiii/parts/exe/tmp
